src/test/deca/codegen/invalid/test_division_by_zero-4.deca
// Description:
//      Test la division par zero
//
// Resultat:
//      Ligne 12 : error - division par zero impossible  
// 
// Historique:
//    cree le 20/01/2022

{
    int a = 87.0;
    int b = 0;0;
    int res = a/b;
}

